frontend/test/should_fail/exact_001.grg
rule r {
	pattern {
	    x:Node;
        exact();
	}
	replace {
	}
}

